--- a/scss/viSimpleSlider.scss
+++ b/scss/viSimpleSlider.scss
@@ -5,7 +5,7 @@
 @font-face {
  font-family: 'NanumBarunGothic';
  src: url(../font/NanumBarunGothic.eot);
- src:local(※), 
+ src:local(※),
      url(../font/NanumBarunGothic.eot?#iefix) format('embedded-opentype'),
      url(../font/NanumBarunGothic.woff) format('woff'),
      url(../font/NanumBarunGothic.ttf) format('truetype');
@@ -13,7 +13,7 @@
 @font-face {
  font-family: 'NanumMyeongjo';
  src: url(../font/NanumMyeongjo.eot);
- src:local(※), 
+ src:local(※),
      url(../font/NanumMyeongjo.eot?#iefix) format('embedded-opentype'),
      url(../font/NanumMyeongjo.woff) format('woff'),
      url(../font/NanumMyeongjo.ttf) format('truetype');
@@ -60,6 +60,11 @@ div.info{
                 background-color: #444;
                 padding: 10px;
             }
+            p.js2{
+                color: #fff;
+                background-color: #666;
+                padding: 10px;
+            }
             >dl{
                 >dt{
                     font-size: 16px;
@@ -67,11 +72,11 @@ div.info{
                     margin-bottom: 5px;
                     border-bottom: 1px dashed #ddd;
                     color: #ff4280;
-                    
+
                 }
                 >dd{
                     padding-left: 0;
-                    
+
                 }
             }
             ul{
@@ -82,14 +87,14 @@ div.info{
         }
         //dd
     }
-    
+
 }
 .viSimpleSlider,#testDiv{
-    width: 100%;    
+    width: 100%;
     background-color: #eee;
     overflow: hidden;
     ul{
-//       overflow: hidden; 
+//       overflow: hidden;
             >li{
 //                float: left;
                 position: absolute;
@@ -109,7 +114,7 @@ div.info{
                         font-size: 14px;
                         margin-top: -20px;
                     }
-                    >img{                        
+                    >img{
                         vertical-align: top;
                     }
                 }
@@ -133,7 +138,7 @@ div.info{
                         line-height: 1.2;
                     }
                 }*/
-                
+
                 /*@media screen and (min-width:900px){
                     .subtitle{
                         top: 40px;
@@ -159,10 +164,10 @@ div.info{
                     font-size: 16px;
                 }
             }
-            
+
             //li
         }
-    .indicate{        
+    .indicate{
         width: 100%;
         bottom: 10px;
         z-index: 120;
